docs/docs/0.1.2/installation/kubernetes.md
# Kubernetes

::: tip
**Don't forget!** The [Official Documentation](/docs/0.1.2/) of Kuma is a great place to learn about both basic and more advanced topics.
:::

To install and run Kuma on Kubernetes execute the following steps:

## 1. Download and run Kuma

To run Kuma on Kubernetes, you need to download a compatible version of Kuma for the machine where you will be executing the commands.

* [CentOS](https://kong.bintray.com/kuma/kuma-0.1.2-centos.tar.gz)
* [RedHat](https://kong.bintray.com/kuma/kuma-0.1.2-rhel.tar.gz)
* [Debian](https://kong.bintray.com/kuma/kuma-0.1.2-debian.tar.gz)
* [Ubuntu](https://kong.bintray.com/kuma/kuma-0.1.2-ubuntu.tar.gz)
* [macOS](https://kong.bintray.com/kuma/kuma-0.1.2-darwin.tar.gz)

Once downloaded, we can extract the content of the archive with:

```sh
$ tar xvzf [FILE]
$ cd bin && ls
envoy   kuma-cp   kuma-dp   kuma-tcp-echo kumactl
```

::: tip
**Note**: On Kubernetes - of all the Kuma binaries in the `bin` folder - we only need `kumactl`.
:::

To install and run Kuma execute:

```sh
$ kumactl install control-plane | kubectl apply -f -
```

By executing this operation, a new `kuma-system` namespace will be created.

## 2. Start services

On Kubernetes, we can start a simple service by executing the following command:

```sh
kubectl apply -f https://raw.githubusercontent.com/Kong/kuma/master/examples/kubernetes/sample-service.yaml
```

Note that two things are happening in the YAML file:

* We are including a `kuma.io/sidecar-injection: enabled` label in the `Namespace` to automatically inject Kuma sidecars into every Pod belonging to the namespace.
* We are adding a `kuma.io/mesh: default` annotation to determine on what [`Mesh`](/docs/0.1.2/policies/#mesh) the service belongs.

## 3. Apply Policies

Now you can start applying [Policies](/docs/0.1.2/policies) to your `default` Service Mesh, like Mutual TLS:

```sh
$ echo "apiVersion: kuma.io/v1alpha1
kind: Mesh
metadata:
  namespace: kuma-system
  name: default
spec:
  mtls:
    enabled: true
    ca:
      builtin: {}" | kubectl apply -f -
```

## 4. Configure

After you apply your policy for mTLS, let's utalize `kumactl` to review your entities. `kuma-cp` does not come configured with an external IP, so you will have to use port-forward to configure `kumactl` to point to this remote `kuma-cp` instance. 

***Please note that this is only for demo purposes. In a production deployment, the `kuma-cp` would be available outside the cluster and be easily accessible. You should not be using port-forward for regular operations in a production system.***

```sh
$ kubectl -n kuma-system port-forward $(kubectl -n kuma-system get pod -l app=kuma-control-plane -o jsonpath='{.items[0].metadata.name}') 5681:5681
```
You can now configure `kumactl` to point to this remote `kuma-cp` instance by running:

```sh
$ kumactl config control-planes add --name=first-kuma --address=http://localhost:5681
```
::: tip You can also configure kumactl to point to any other remote kuma-cp instance
:::

## 5. Done!

You can now review the entities created by Kuma by using the [`kumactl`](/docs/0.1.2/documentation/#kumactl) CLI. For example you can list the Meshes:

```sh
$ kumactl get meshes
NAME
default
```

and you can list the data-planes that have been registered, and their status:

```sh
$ kumactl get dataplanes
MESH      NAME        TAGS
default   dp-echo-1   service=echo

$ kumactl inspect dataplanes
MESH      NAME        TAGS              STATUS   LAST CONNECTED AGO   LAST UPDATED AGO   TOTAL UPDATES   TOTAL ERRORS
default   dp-echo-1   service=echo      Online   19s                  18s                2               0
```